crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_default_export_index.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$ } from "@qwik.dev/core";

export default component$(() => {
  return <div onClick$={() => console.log(mongodb)}></div>;
});

=== src/components/mongo/index.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
export default /*#__PURE__*/ componentQrl(
  /*#__PURE__*/ inlinedQrl(() => {
    return (
      <div
        q-e:click={
          /*#__PURE__*/ inlinedQrl(
            () => console.log(mongodb),
            "mongo_component_div_q_e_click_jncbxvZVtWY",
          )
        }
      ></div>
    );
  }, "mongo_component_ouWLj4jA2oI"),
);
== DIAGNOSTICS ===

[]
