crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_default_export_invalid_ident.snap
---
source: src/test.rs
expression: output
---
==INPUT==

import { component$ } from "@qwik.dev/core";

export default component$(() => {
  return <div onClick$={() => console.log(mongodb)}></div>;
});

============================= src/components/mongo/404.tsx ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_zRvoWc98eqo = ()=>import("./404.tsx__404_component_zRvoWc98eqo");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_zRvoWc98eqo, "_404_component_zRvoWc98eqo"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/src/components/mongo/404.tsx\"],\"names\":[],\"mappings\":\";;;AAEA,6BAAe,6EAEZ\"}")
============================= src/components/mongo/404.tsx__404_component_zRvoWc98eqo.tsx (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
const i_aMLnLWtkRhc = ()=>import("./404.tsx__404_component_div_q_e_click_aMLnLWtkRhc");
export const _404_component_zRvoWc98eqo = ()=>{
    return <div q-e:click={/*#__PURE__*/ qrl(i_aMLnLWtkRhc, "_404_component_div_q_e_click_aMLnLWtkRhc")}></div>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/src/components/mongo/404.tsx\"],\"names\":[],\"mappings\":\";;0CAE0B;IACxB,QAAQ,IAAI,2FAAwC;AACtD\"}")
/*
{
  "origin": "src/components/mongo/404.tsx",
  "name": "_404_component_zRvoWc98eqo",
  "entry": null,
  "displayName": "404.tsx__404_component",
  "hash": "zRvoWc98eqo",
  "canonicalFilename": "404.tsx__404_component_zRvoWc98eqo",
  "path": "src/components/mongo",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    73,
    142
  ]
}
*/
============================= src/components/mongo/404.tsx__404_component_div_q_e_click_aMLnLWtkRhc.tsx (ENTRY POINT)==

export const _404_component_div_q_e_click_aMLnLWtkRhc = ()=>console.log(mongodb);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/src/components/mongo/404.tsx\"],\"names\":[],\"mappings\":\"wDAGwB,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "src/components/mongo/404.tsx",
  "name": "_404_component_div_q_e_click_aMLnLWtkRhc",
  "entry": null,
  "displayName": "404.tsx__404_component_div_q_e_click",
  "hash": "aMLnLWtkRhc",
  "canonicalFilename": "404.tsx__404_component_div_q_e_click_aMLnLWtkRhc",
  "path": "src/components/mongo",
  "extension": "tsx",
  "parent": "_404_component_zRvoWc98eqo",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    105,
    131
  ]
}
*/
== DIAGNOSTICS ==

[]
