crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_derived_signals_children.snap
---
source: src/test.rs
expression: output
---
==INPUT==
import { component$, useStore, mutable } from "@qwik.dev/core";

import { dep } from "./file";

export const TextContent = component$((props) => {
  return (
    <>
      <div>data-nu: {props["data-nu"]}</div>
      <div>class: {props.class}</div>
    </>
  );
});

export const App = component$(() => {
  const signal = useSignal(0);
  const store = useStore({});
  return (
    <>
      <div>text</div>
      <div>{`text`}</div>
      <div>{1}</div>
      <div>{true}</div>
      <div>{`text${12}`}</div>
      <div>{typeof `text${12}` === "string" ? 12 : 43}</div>
      <div>{signal}</div>
      <div>{signal.value}</div>
      <div>{12 + signal.value}</div>
      <div>{store.address.city.name}</div>
      <div>{store.address.city.name ? "true" : "false"}</div>
      <div>{dep}</div>
      <div>{dep.thing}</div>
      <div>{dep.thing + "stuff"}</div>
      <div>{globalThing}</div>
      <div>{globalThing.thing}</div>
      <div>{globalThing.thing + "stuff"}</div>
      <div>{signal.value()}</div>
      <div>{signal.value + unknown()}</div>
      <div>{mutable(signal)}</div>
      <div>{signal.value + dep}</div>
    </>
  );
});

============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
const _hf0 = (p0) => 12 + p0.value;
const _hf0_str = "12+p0.value";
const _hf1 = (p0) => p0.address.city.name;
const _hf1_str = "p0.address.city.name";
const _hf2 = (p0) => (p0.address.city.name ? "true" : "false");
const _hf2_str = 'p0.address.city.name?"true":"false"';
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { useStore, mutable } from "@qwik.dev/core";
import { dep } from "./file";
const TextContent_component_puSwpKXO7Kg = (props) => {
  return /*#__PURE__*/ _jsxSorted(
    _Fragment,
    null,
    null,
    [
      /*#__PURE__*/ _jsxSorted(
        "div",
        null,
        null,
        ["data-nu: ", _wrapProp(props, "data-nu")],
        1,
        null,
      ),
      /*#__PURE__*/ _jsxSorted("div", null, null, ["class: ", _wrapProp(props, "class")], 1, null),
    ],
    1,
    "u6_0",
  );
};
export const TextContent = /*#__PURE__*/ componentQrl(
  /*#__PURE__*/ inlinedQrl(TextContent_component_puSwpKXO7Kg, "TextContent_component_puSwpKXO7Kg"),
);
const App_component_ckEPmXZlub0 = () => {
  const signal = useSignal(0);
  const store = useStore({});
  return /*#__PURE__*/ _jsxSorted(
    _Fragment,
    null,
    null,
    [
      /*#__PURE__*/ _jsxSorted("div", null, null, "text", 3, null),
      /*#__PURE__*/ _jsxSorted("div", null, null, `text`, 3, null),
      /*#__PURE__*/ _jsxSorted("div", null, null, 1, 3, null),
      /*#__PURE__*/ _jsxSorted("div", null, null, true, 3, null),
      /*#__PURE__*/ _jsxSorted("div", null, null, `text${12}`, 3, null),
      /*#__PURE__*/ _jsxSorted(
        "div",
        null,
        null,
        typeof `text${12}` === "string" ? 12 : 43,
        3,
        null,
      ),
      /*#__PURE__*/ _jsxSorted("div", null, null, signal, 3, null),
      /*#__PURE__*/ _jsxSorted("div", null, null, _wrapProp(signal), 3, null),
      /*#__PURE__*/ _jsxSorted("div", null, null, _fnSignal(_hf0, [signal], _hf0_str), 3, null),
      /*#__PURE__*/ _jsxSorted("div", null, null, _fnSignal(_hf1, [store], _hf1_str), 3, null),
      /*#__PURE__*/ _jsxSorted("div", null, null, _fnSignal(_hf2, [store], _hf2_str), 3, null),
      /*#__PURE__*/ _jsxSorted("div", null, null, dep, 3, null),
      /*#__PURE__*/ _jsxSorted("div", null, null, dep.thing, 3, null),
      /*#__PURE__*/ _jsxSorted("div", null, null, dep.thing + "stuff", 3, null),
      /*#__PURE__*/ _jsxSorted("div", null, null, globalThing, 1, null),
      /*#__PURE__*/ _jsxSorted("div", null, null, globalThing.thing, 1, null),
      /*#__PURE__*/ _jsxSorted("div", null, null, globalThing.thing + "stuff", 1, null),
      /*#__PURE__*/ _jsxSorted("div", null, null, signal.value(), 1, null),
      /*#__PURE__*/ _jsxSorted("div", null, null, signal.value + unknown(), 1, null),
      /*#__PURE__*/ _jsxSorted("div", null, null, mutable(signal), 1, null),
      /*#__PURE__*/ _jsxSorted("div", null, null, signal.value + dep, 1, null),
    ],
    1,
    "u6_1",
  );
};
export const App = /*#__PURE__*/ componentQrl(
  /*#__PURE__*/ inlinedQrl(App_component_ckEPmXZlub0, "App_component_ckEPmXZlub0"),
);
== DIAGNOSTICS ==

[]
