crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_explicit_ext_no_transpile.snap
---
source: src/test.rs
expression: output
---
==INPUT==
import { component$, $, useStyles$ } from "@qwik.dev/core";

export const App = component$((props) => {
  useStyles$("hola");
  return $(() => <div></div>);
});

============================= test.tsx ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_XXXXXXXXXXXX.tsx");
export const App = /*#__PURE__*/ componentQrl(
  /*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "App_component_XXXXXXXXXXXX"),
);

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;;AAEA,OAAO,MAAM,oBAAM,4EAGhB"}',
);
============================= test.tsx_App_component_XXXXXXXXXXXX.tsx ==
import { qrl } from "@qwik.dev/core";
import { useStylesQrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_useStyles_XXXXXXXXXXXX.tsx");
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_1_XXXXXXXXXXXX.tsx");
export const App_component_XXXXXXXXXXXX = (props) => {
  useStylesQrl(/*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "App_component_useStyles_XXXXXXXXXXXX"));
  return /*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "App_component_1_XXXXXXXXXXXX");
};

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;;;yCAE8B,CAAC;IAC7B;IACA;AACF"}',
);
/*
{
  "origin": "test.tsx",
  "name": "App_component_XXXXXXXXXXXX",
  "entry": "entry_segments",
  "displayName": "test.tsx_App_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    92,
    159
  ],
  "paramNames": [
    "props"
  ]
}
*/
============================= test.tsx_App_component_useStyles_XXXXXXXXXXXX.tsx ==
export const App_component_useStyles_XXXXXXXXXXXX = "hola";

Some('{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":"mDAGa"}');
/*
{
  "origin": "test.tsx",
  "name": "App_component_useStyles_XXXXXXXXXXXX",
  "entry": "entry_segments",
  "displayName": "test.tsx_App_component_useStyles",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_useStyles_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": "App_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false,
  "loc": [
    118,
    124
  ]
}
*/
============================= test.tsx_App_component_1_XXXXXXXXXXXX.tsx ==
export const App_component_1_XXXXXXXXXXXX = () => <div></div>;

Some('{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":"2CAIW,KAAO,MAAM"}');
/*
{
  "origin": "test.tsx",
  "name": "App_component_1_XXXXXXXXXXXX",
  "entry": "entry_segments",
  "displayName": "test.tsx_App_component_1",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_1_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": "App_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    138,
    155
  ]
}
*/
== DIAGNOSTICS ==

[]
